--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2 # use CircleCI 2.0
 jobs: # basic units of work in a run
   build: # runs not using Workflows must have a `build` job as entry point
-    working_directory: ~/ticktok-clojure-client # directory where steps will run
+    working_directory: ~/ticktok/ticktok # directory where steps will run
     docker: # run the steps with Docker
       - image: circleci/clojure:lein-2.8.1 # ...with this image as the primary container; this is where all `steps` will run
     environment: # environment variables for primary container
@@ -10,12 +10,12 @@ jobs: # basic units of work in a run
     steps: # commands that comprise the `build` job
       - checkout # check out source code to working directory
       - restore_cache: # restores saved cache if checksum hasn't changed since the last run
-          key: ticktok-clojure-client-{{ checksum "project.clj" }}
+          key: ticktok-{{ checksum "project.clj" }}
       - run: lein deps
       - save_cache: # generate and store cache in the .m2 directory using a key template
           paths:
             - ~/.m2
-          key: ticktok-clojure-client-{{ checksum "project.clj" }}
+          key: ticktok-{{ checksum "project.clj" }}
       - run: lein do test, uberjar
       - store_artifacts: # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/ 
           path: target/uberjar/ticktok.jar
