--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs: # basic units of work in a run
       - checkout # check out source code to working directory
       - run: ls
       - run: cd ticktok
+      - run: ls
       - restore_cache: # restores saved cache if checksum hasn't changed since the last run
           key: ticktok-{{ checksum "project.clj" }}
       - run: lein deps
