--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,3 +21,6 @@ jobs: # basic units of work in a run
           path: target/uberjar/ticktok.jar
           destination: uberjar
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
+      - run:
+         name: Deploy
+         command: lein release-tasks
