--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs: # basic units of work in a run
           key: ticktok-{{ checksum "project.clj" }}
       - run:
          name: Testing
-         command: lein test
+         command: lein midje
       - run:
          name: Deploy
          command: .circleci/deploy.sh
