added ssh key for github operations

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,9 @@ jobs: # basic units of work in a run
       - run:
          name: Testing
          command: lein midje
+      - add_ssh_keys:
+          fingerprints:
+            - "4a:58:08:49:38:6c:eb:b9:f1:b7:68:81:ad:5c:d2:bb"
       - run:
          name: Deploy
          command: .circleci/deploy.sh
