--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,10 +20,22 @@ jobs: # basic units of work in a run
       - run:
          name: Testing
          command: lein midje
-    deploy-job:
-      steps:
-        - add_ssh_keys:
-            fingerprints:
-              - "4a:58:08:49:38:6c:eb:b9:f1:b7:68:81:ad:5c:d2:bb"
-        - deploy:
-            command: .circleci/deploy.sh
+  deploy:
+    steps:
+      - add_ssh_keys:
+          fingerprints:
+            - "4a:58:08:49:38:6c:eb:b9:f1:b7:68:81:ad:5c:d2:bb"
+      - deploy:
+          command: .circleci/deploy.sh
+
+workflows:
+  version: 2
+  build-and-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: release
