--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,14 +21,16 @@ jobs: # basic units of work in a run
          name: Testing
          command: lein midje
   deploy:
+    working_directory: ~/temp-deploy # directory where steps will run
     docker: # run the steps with Docker
       - image: circleci/clojure:lein-2.8.1
     steps:
+      - checkout
       - add_ssh_keys:
           fingerprints:
             - "4a:58:08:49:38:6c:eb:b9:f1:b7:68:81:ad:5c:d2:bb"
       - deploy:
-          command: .circleci/deploy.sh
+          command: lein release
 
 workflows:
   version: 2
