--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs: # basic units of work in a run
           fingerprints:
             - "4a:58:08:49:38:6c:eb:b9:f1:b7:68:81:ad:5c:d2:bb"
       - deploy:
-          command: lein release
+          command: .circleci/deploy.sh
 
 workflows:
   version: 2
