--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,8 @@ jobs: # basic units of work in a run
       JVM_OPTS: -Xmx3200m # limit the maximum heap size to prevent out of memory errors
     steps: # commands that comprise the `build` job
       - checkout # check out source code to working directory
-      - restore_cache: # restores saved cache if checksum hasn't changed since the last run
-          key: ticktok-{{ checksum "project.clj" }}
+#      - restore_cache: # restores saved cache if checksum hasn't changed since the last run
+ #         key: ticktok-{{ checksum "project.clj" }}
       - run: lein deps
       - save_cache: # generate and store cache in the .m2 directory using a key template
           paths:
